# noteblock-generator

./: .gitignore  .gitmodules  .mailmap  README.md  base.py  example.json  frere jacques.json  generate.py  generator.py  happy_birthday.mus  main.py  minecraft.py  music.py  noteblock.code-workspace  package.json  pyproject.toml  pyrightconfig.json  sync-types.sh  translator.py
.dev/.schemas/: schema.json
.dev/.schemas/objects/: composition.schema.json  movement.schema.json  notes.schema.json  section.schema.json  voice.schema.json
Frere Jacques/: level.dat_old
Frere Jacques/advancements/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
Frere Jacques/entities/: r.-1.0.mca  r.0.-1.mca  r.0.0.mca
Frere Jacques/playerdata/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.dat_old
Frere Jacques/region/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
Frere Jacques/stats/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
HappyBirthday/: level.dat_old
HappyBirthday/advancements/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
HappyBirthday/playerdata/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.dat_old
HappyBirthday/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
HappyBirthday/stats/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
Model/: level.dat_old
Model/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
Model/playerdata/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.dat_old
Model/region/: r.0.-1.mca
Model/stats/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
New World/: level.dat_old
New World/advancements/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
New World/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.0.mca
New World/playerdata/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.dat_old
New World/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca  r.1.-1.mca  r.1.0.mca
New World/stats/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
Test/: level.dat_old
Test/advancements/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
Test/playerdata/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.dat_old
Test/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
Test/stats/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
World/: level.dat_old
World/advancements/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
World/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
World/playerdata/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.dat_old
World/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-1.mca  r.0.-2.mca  r.0.0.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
World/stats/: b44f7dfd-c8d5-4330-809d-0f4aaf2a8f41.json
compiler/: biome.jsonc  esbuild.config.ts  esbuild.tsconfig.json  package.json  schema.json  tsconfig.build.json  tsconfig.json  vitest.config.js  vitest.config.ts
compiler/src/: main.ts
compiler/src/api/: types.d.ts
compiler/src/cli/: cli.ts  commands.ts  error.ts  io.ts
compiler/src/core/: compile.ts
compiler/src/core/assembler/: assemble.ts  bound-tracker.ts  bounds-tracker.ts  error-tracker.ts  index.ts  level-mapper.ts  song-processor.ts  types.d.ts  validation.ts
compiler/src/core/builder/: block-placer.ts  block.ts  buffer.ts  build.ts  builder.ts  cache.ts  cursor.ts  direction.ts  double-builder.ts  index.ts  single-builder.ts  size.ts  types.d.ts  wire.ts
compiler/src/core/layout/: errors.ts  height.ts  index.ts  layout.ts  level-mapper.ts  levels.ts  tick-processor.ts  ticks.ts  types.d.ts
compiler/src/core/loader/: index.ts  load.ts  song.ts  types.d.ts  validate.ts  voice.ts
compiler/src/core/resolver/: cache.ts  duration.ts  index.ts  resolve.ts
compiler/src/core/schema/: duration.d.ts
compiler/src/core/types/: index.d.ts
compiler/src/core/validator/: index.ts  note.ts  song.ts  validate.ts  voice.ts
compiler/src/extras/project-init/: index.ts  init.ts  schema.ts  src.ts
compiler/src/init/: init.ts
compiler/src/lib/: compile.ts
compiler/src/schema-generator/: generate.ts  main.ts  transformer.ts
compiler/test/: compile.test.ts  integration.test.js  integration.test.ts  schema.test.ts  test.ts  tsconfig.json
compiler/test/code/: compile.test.ts  schema.test.ts  shared.ts
compiler/test/tests/: compile.test.ts  schema.test.ts
dev/: README.md
dev/.schemas/objects/: notes.schema.json  section.schema.json  voice.schema.json
dev/.schemas/types/: meta.schema.json  notes.schema.json  properties.schema.json
generator/: pyproject.toml
generator/noteblock_generator/: __init__.py  cli.py  main.py
generator/noteblock_generator/api/: loader.py  types.py
generator/noteblock_generator/cli/: __init__.py  commands.py  console.py  progress_bar.py
generator/noteblock_generator/core/: blend.py  blocks.py  cache.py  chunks.py  coordinates.py  direction.py  generate.py  generator.py  placement.py  session.py  structure.py  world.py
generator/noteblock_generator/core/api/: loader.py  types.py  watcher.py
generator/noteblock_generator/core/utils/: console.py  files.py  iter.py  progress_bar.py
generator/noteblock_generator/data/: loader.py  schema.py  watcher.py
generator/test/: conftest.py  test_generate.py
noteblock_generator/: __main__.py  amulet_fix.py  amulet_wrapper.py  cli.py  compiler.py  generator.py  generator_backend.py  generator_utils.py  main.py  parser.py  utils.py  world.py
noteblock_generator/music/: __init__.py  compiler.py  data.py  loader.py  parser.py  properties.py  typedefs.py  utils.py  validator.py
schemas/: schema.json
schemas/objects/: section.schema.json
schemas/objects/double-division/: notes.schema.json  section.schema.json  voice.schema.json
schemas/objects/single-division/: notes.schema.json  section.schema.json  voice.schema.json
schemas/properties/: globals.schema.json  locals.schema.json  meta.schema.json  notes.schema.json  voices.schema.json
schemas/types/: meta.schema.json  properties.schema.json
schemes/: global.schema.json  notes.schema.json  voice.schema.json
scripts/: publish.sh  sync-types.sh
(+297 files in other folders)
