[tool.poetry]
name = "noteblock-generator"
version = "0.2.1"
description = "Generate music in Minecraft noteblocks from text source code."
authors = ["Felix Fourcolor <felix.fourcolor@gmail.com>"]
readme = "README.md"
license = "CC0-1.0"
homepage = "https://www.youtube.com/@felixfourcolor"
repository = "https://github.com/FelixFourcolor/noteblock-generator"

[tool.poetry.scripts]
noteblock-generator = "noteblock_generator.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
amulet-core = "^1.9.21"
PyMCTranslate = "^1.2.22"
colorama = ">=0.4.6"
multimethod = "^1.11.2"
pydantic = "^2.1"
pyyaml = ">=5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyright = "==1.1.345"
ruff = ">=0.3"

[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
strictParameterNoneValue = false

[tool.ruff]
target-version = "py310"
show-fixes = true
cache-dir = "~/.cache/ruff"
exclude = [
    "noteblock_generator/cli.py",
    "noteblock_generator/generator_backend.py",
    "noteblock_generator/generator_utils.py",
    "noteblock_generator/generator.py",
    "noteblock_generator/parser.py",
] # temporarily ignore files currently not in development
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "ANN",
    "ARG",
    "B904",
    "BLE",
    "COM812",
    "D",
    "EM",
    "ERA",
    "INP",
    "N",
    "PLR0911",
    "PLR2004",
    "RET503",
    "RET504",
    "RUF013",
    "S101",
    "SLOT001",
    "T201",
    "TCH",
    "TID252",
    "TD",
    "TRY",
    "UP007",
    "UP035",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
