[tool.poetry]
name = "noteblock-generator"
version = "0.2.99"
description = "Generate music compositions in Minecraft noteblocks"
authors = ["Felix Fourcolor <felix.fourcolor@gmail.com>"]
license = "MIT"
packages = [{ include = "noteblock_generator" }]
homepage = "https://www.youtube.com/@felixfourcolor"
repository = "https://github.com/FelixFourcolor/noteblock-generator"
keywords = ["minecraft", "noteblock"]

[tool.poetry.scripts]
nbg = "noteblock_generator.main:run"

[tool.poetry.dependencies]
python = ">=3.10, <3.15"
amulet-core = "^1.9.30"
typer = "^0.16.1"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
show-fixes = true
extend-safe-fixes = ["ALL"]
cache-dir = "~/.cache/ruff"
lint.per-file-ignores = { "types.py" = ["ALL"] }
format.exclude = ["types.py"]
