[project]
name = "noteblock-generator"
version = "0.2.99"
description = "Generate music in Minecraft noteblocks"
authors = [{ name = "Felix Fourcolor", email = "felix.fourcolor@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10, <3.15"
keywords = ["minecraft", "noteblock"]
dependencies = [
    "amulet-core>=1.9.31",
    "typer>=0.20.0",
    "pydantic>=2.12.3",
    "humanize>=4.14.0",
]

[project.urls]
Homepage = "https://www.youtube.com/@felixfourcolor"
Repository = "https://github.com/FelixFourcolor/noteblock-generator"

[project.scripts]
nbg = "noteblock_generator.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["noteblock_generator"]

[tool.ruff]
target-version = "py310"
show-fixes = true
extend-safe-fixes = ["ALL"]
cache-dir = "~/.cache/ruff"
lint.per-file-ignores = { "types.py" = ["ALL"] }
format.exclude = ["types.py"]
