[project]
name = "noteblock-generator"
version = "0.2.99"
description = "Generate music in Minecraft noteblocks"
authors = [{ name = "Felix Fourcolor", email = "felix.fourcolor@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10, <3.14" # 3.14 blocker: msgspec
keywords = ["minecraft", "noteblock"]
dependencies = [
    "amulet-core>=1.9.31",
    "typer>=0.20.0",
    "humanize>=4.14.0",
    "msgspec>=0.19.0",
    "watchfiles>=1.1.1",
]

[project.urls]
Homepage = "https://www.youtube.com/@felixfourcolor"
Repository = "https://github.com/FelixFourcolor/noteblock-generator"

[project.scripts]
nbg = "noteblock_generator.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["noteblock_generator"]

[tool.ruff]
target-version = "py310"
show-fixes = true
extend-safe-fixes = ["ALL"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
